--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,407 @@
-.App {
+
+* {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-text-size-adjust: none;
+  outline: none;
+  border-radius: 0;
+  -webkit-font-smoothing: antialiased
+}
+@-webkit-keyframes loadingAnimation {
+  0% {
+      -webkit-transform: translate3d(-30%, 0, 0);
+      transform: translate3d(-30%, 0, 0)
+  }
+
+  to {
+      -webkit-transform: translate3d(30%, 0, 0);
+      transform: translate3d(30%, 0, 0)
+  }
+}
+
+@-webkit-keyframes phAnimation {
+  0% {
+      -webkit-transform: translate3d(-30%, 0, 0);
+      transform: translate3d(-30%, 0, 0)
+  }
+
+  to {
+      -webkit-transform: translate3d(30%, 0, 0);
+      transform: translate3d(30%, 0, 0)
+  }
+}
+
+@keyframes phAnimation {
+  0% {
+      -webkit-transform: translate3d(-30%, 0, 0);
+      transform: translate3d(-30%, 0, 0)
+  }
+
+  to {
+      -webkit-transform: translate3d(30%, 0, 0);
+      transform: translate3d(30%, 0, 0)
+  }
+}
+
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased
+}
+
+.header{
+  min-height: 100vh;
+  width: 100%;
+  background-image:url('https://images.unsplash.com/photo-1614850523296-d8c1af93d400?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8bGlnaHQlMjBjb2xvdXJ8ZW58MHx8MHx8&w=1000&q=80');
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+.Navbar {
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0px;
+
+
+}
+
+.Navbar::before {
+  content: "";
+  background-color: black;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.3;
+
+}
+
+.logo {
+  margin: -5px 0px;
+}
+.logo img {
+  width: 117px;
+  height: 112px;
+  margin: 6px 0px;
+  border-radius: 542px;
+}
+.Navbar ul {
+  display: flex;
+  list-style: none;
+  text-decoration: none;
+}
+
+.Navbar ul li {
+  list-style: none;
+  text-decoration: none;
+  font-size: 1.5rem;
+
+}
+
+.Navbar ul li a {
+  color: white;
+  font-family: 'Bree Serif', serif;
+  display: block;
+  padding: 3px 22px;
+  border-radius: 33px;
+  text-decoration: none;
+
+}
+
+.Navbar ul li a:hover {
+  color: black;
+  background-color: white;
+
+}
+.text-box{
+  width: 90%;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+}
+.text-box h1{
+  font-size: 62px;
+  color:#c85a5a;
+  font-family: 'Bree Serif', serif;
+
+}
+.text-box p{
+  margin: 10px 0 40px;
+  font-size: 20px;
+  color: #1d7161;
+  font-family: 'Bree Serif', serif;
+
+}
+.visit-btn{
+  display: inline;
+  text-decoration: none;
+  color: rgb(11, 11, 11);
+  
+  background-color: #da930e;
+  border: 1px solid whitesmoke;
+  padding: 12px 34px;
+  font-size: 21px;
+  font-family: 'Bree Serif', serif;
+  
+  border-radius: 35px;
+  position: relative;
+  cursor: pointer;
+}
+.visit-btn:hover{
+  border: 1px solid tomato;
+  background: pink;
+  transition: 1s ;
+}
+
+nav  .fa{
+  display: none;
+}
+
+
+@media(max-width:700px){
+  .text-box h1{
+      font-size: 20px;
+  }
+  .nav-links ul li{
+      display: block;
+  }
+  .nav-links{
+      position: absolute;
+      background:#f44336;
+      height: 100vh;
+      width: 200px;
+      top:0;
+      right: -200px;
+      text-align: left;
+      z-index: 2;
+      transition: 1s;
+  }
+  nav .fa{
+      display: block;
+      color: white;
+      margin: 10px;
+      cursor: pointer;
+      font-size: 20px;
+
+  }
+  .nav-links ul{
+      padding: 30px;
+  }
+}
+.course{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+}
+h1{
+  font-size: 36px;
+  font-weight: 600;
+}
+p{
+  color: black;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
+  margin: 2px auto;
+
+}
+.row{
+  margin:5% ;
+  display: flex;
+  justify-content: space-between;
+}
+.course-col{
+  flex-basis: 31%;
+  background: rgb(249, 122, 100);
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 10px 6px;
+  box-sizing: border-box;
+}
+h3{
+  text-align: center;
+  font-weight: 600;
+  margin: 10px;
+}
+.course-col:hover{
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+  
+}
+@media(max-width:700px){
+  .row{
+      flex-direction: column;
+  }
+}
+
+footer .wrapper {
+  padding: 60px 0;
+  /* background-image: url('./footer\ background1.jpg'); */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 35px 95px;
+  font-size:34px;
+}
+
+footer .wrapper>ul>li ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex
+}
+
+footer .wrapper>ul>li ul li a {
+  padding: 7px;
+  background: #ffe6d8;
+  border-radius: 50%;
+  line-height: 10px;
+  margin: 10px 5px 0 0;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s
+}
+
+footer .wrapper>ul>li ul li a:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  -webkit-filter: none;
+  filter: none
+}
+
+footer .wrapper>ul>li ul li:last-child a {
+  margin-right: 0
+}
+
+footer .wrapper>ul>li a {
+  font-size: 16px;
+  padding: 10px 0;
+  display: inline-block;
+  color: #28508c;
+  font-family: gilroymedium, "sans-serif";
+  -webkit-transition: -webkit-filter 0.2s;
+  transition: -webkit-filter 0.2s;
+  transition: filter 0.2s;
+  transition: filter 0.2s, -webkit-filter 0.2s
+}
+
+footer .wrapper>ul>li a.title {
+  cursor: initial
+}
+
+footer .wrapper>ul>li>a:not(.title):hover {
+  -webkit-filter: brightness(1.5);
+  filter: brightness(1.5)
+}
+
+footer .wrapper>ul>li>a.semibold:not(.title) {
+  position: relative
+}
+
+footer .wrapper>ul>li>a.semibold:not(.title):before {
+  content: "";
+  position: absolute;
+  bottom: 15px;
+  right: -15px;
+  height: 10px;
+  width: 10px;
+  background-size: 10px;
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1)
+}
+
+footer .wrapper>ul>li a.semibold {
+  font-family: gilroysemilbold;
+  color: #d26459;
+  font-size: 15px
+}
+
+footer .wrapper>ul:last-child {
+  position: relative
+}
+
+footer .wrapper>ul:last-child>li:last-child {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  text-align: right
+}
+
+footer .wrapper>ul:last-child>li:last-child img {
+  image-rendering: -webkit-optimize-contrast;
+  width: 60px
+}
+
+footer .copyright {
+  background-color: #ff7f81;
+  padding: 5px 0;
+  color: #fff;
+  font-size: 12px
+}
+
+footer .copyright .madeWithLove {
+  line-height: 25px
+}
+
+footer .copyright .madeWithLove:hover {
+  opacity: 0.9
+}
+
+footer .copyright .madeWithLove:hover span {
+  opacity: 1;
+  color: red
+}
+.services {
+  margin: 34px auto;
+  display: flex;
+}
+
+.services .box {
+  width:100%;
+  grid-template-columns: repeat(3,1fr);
+  border: 2px solid brown;
+  padding: 34px;
+  margin: 8px 21px;
+  border-radius: 23px;
+  background-color: #dbdfc9;
+}
+.services h2{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.services .box img {
+  width:100%;
+  height: 194px;
+  margin: auto;
+  display: block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.services .box p {
+  font-family: 'Bree Serif', serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.services-container h1{
+  text-align: center;
 }
